<resources>
    <string name="app_name">Address Book</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Add_New">Add New</string>
    <string name="edit">Edit Contact</string>
    <string name="delete">Delete Contact</string>
    <string name="editnote">Edit Note</string>
    <string name="deletenote">Delete Note</string>
    <string name="title_activity_display_contact">DisplayContact</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="street">Street</string>
    <string name="country">City/State/Zip</string>
    <string name="save">Save Contact</string>
    <string name="deleteContact">Are you sure, you want to delete it.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="datum">Datum</string>
    <string name="savenote">Save</string>
    <string name="grad">Grad</string>
    <string name="naslov">Naslov</string>
    <string name="zabiljeska">Zabiljeska</string>
    <string name="title_activity_onama">Map</string>
</resources>